--- a/weekcalendar/src/main/res/drawable/solid_circle.xml
+++ b/weekcalendar/src/main/res/drawable/solid_circle.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/colorAccent"/>
-    <size android:width="7dp"
-        android:height="7dp"/>
+    android:shape="rectangle">
+
+    <solid android:color="@color/colorAccent" />
+    <size
+        android:width="7dp"
+        android:height="7dp" />
+    <corners android:radius="12dp" />
 
 </shape>
