--- a/weekcalendar/src/main/res/layout/grid_item.xml
+++ b/weekcalendar/src/main/res/layout/grid_item.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-
         android:id="@+id/daytext"
         android:layout_width="@dimen/day_text_wh"
         android:layout_height="@dimen/day_text_wh"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:text="20"
         android:textColor="@android:color/white"
-        android:textSize="17sp"/>
+        android:textSize="14sp"
+        tools:text="20" />
 
 </RelativeLayout>
