--- a/weekcalendar/src/main/res/layout/grid_item.xml
+++ b/weekcalendar/src/main/res/layout/grid_item.xml
@@ -6,15 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/daytext"
-        android:layout_width="@dimen/day_text_wh"
-        android:layout_height="@dimen/day_text_wh"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:gravity="center"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        tools:text="20" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_month"
+            android:layout_width="@dimen/day_text_wh"
+            android:layout_height="@dimen/day_text_wh"
+            android:gravity="center"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="10sp"
+            tools:text="20"/>
+
+        <TextView
+            android:id="@+id/daytext"
+            android:layout_width="@dimen/day_text_wh"
+            android:layout_height="@dimen/day_text_wh"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            tools:text="20" />
+
+    </LinearLayout>
 
 </RelativeLayout>
